chore: update dependencies, fix eslint

--- a/package.json
+++ b/package.json
@@ -16,26 +16,29 @@
     "ansi_up": "^6.0.2",
     "buffer": "^6.0.3",
     "codemirror": "^6.0.1",
-    "phoenix": "^1.7.14",
+    "phoenix": "^1.7.17",
     "phoenix-channels": "^1.0.0",
-    "pinia": "^2.2.4",
-    "vue": "^3.5.12",
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13",
     "vue-codemirror": "^6.1.1"
   },
   "devDependencies": {
-    "@types/phoenix": "^1.6.5",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.16.0",
+    "@types/phoenix": "^1.6.6",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.29.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.9",
-    "vue-tsc": "^2.1.6"
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.13.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.16",
+    "typescript": "~5.5.4",
+    "vite": "^6.0.3",
+    "vue-tsc": "^2.1.10"
   }
 }
